packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/domain-framework-import/src/main/java/sample/member/domain/JpaImportCase.java
package sample.member.domain;

import jakarta.persistence.Entity;

class JpaImportCase {
}
